kubernetes/nextjs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nextjs-frontend
  template:
    metadata:
      labels:
        app: nextjs-frontend
    spec:
      containers:
        - name: nextjs
          image: 084828583507.dkr.ecr.us-east-1.amazonaws.com/growthdesk-frontend:v1
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"
          # Kiểm tra trạng thái sẵn sàng của Frontend
          readinessProbe:
            httpGet:
              path: /register
              port: 3000
            initialDelaySeconds: 10
