kubernetes/nextjs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
spec:
  type: ClusterIP
  selector:
    app: nextjs-frontend
  ports:
    - port: 80
      targetPort: 3000
