kubernetes/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-internal
spec:
  clusterIP: None
  ports:
    - port: 5672
      name: amqp
    - port: 15672
      name: management
  selector:
    app: rabbitmq
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-management
spec:
  type: ClusterIP
  ports:
    - port: 15672
      targetPort: 15672
      name: management
  selector:
    app: rabbitmq
